# fcan

./: .gitignore  license.md  mise.toml  pyproject.toml  readme.md
examples/multi-agent/: main.py  maths.json  weather.json
examples/multi-turn/: main.py  message-0.json  message-1.json  readme.md
source/fcan/: server.py  utils.py
source/fcan/handlers/: __init__.py  model_handler.py  task_handler.py
